--- a/themes/starter/assets/css/main.css
+++ b/themes/starter/assets/css/main.css
@@ -32,7 +32,7 @@ h1 {
     width: 92%;
     height: auto;
     box-sizing: border-box;
-    color: #4f515d;
+    color: #d4d7e8;
     font-size: 0.8rem;
     text-align: center;
     text-transform: uppercase;
@@ -50,6 +50,6 @@ h1 {
       margin-bottom: 0.4em;
     }
     a:hover {
-      color: #4f515d;
+      color: #0b5b53;
     }
   }
